syntax = "proto3";
package proto;

option go_package = "./proto";

service Private {
  rpc HealthCheck(HealthCheckReq) returns (HealthCheckRes);
}

message HealthCheckReq {
  string checkStr = 1;
}

message HealthCheckRes {
  HealthCheckReq request = 1;
  int64 num = 2;
}
